--- a/main.yml
+++ b/main.yml
@@ -7,6 +7,7 @@
   gather_facts: false
   tasks:
     - include_role:
-        name: tomcat
+        name: add_devops_user
+        tasks_from: add_user.yml
       
 ...
