--- a/roles/add_devops_user/tasks/add_user.yml
+++ b/roles/add_devops_user/tasks/add_user.yml
@@ -11,7 +11,7 @@
  
    - name: Deploy SSH Key
      authorized_key: user={{username}}
-                     key="{{ lookup('file', 'id_rsa.pub') }}"
+                     key="{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
                      state=present
                      
    - name: Disable Password Authentication
