--- a/main.yml
+++ b/main.yml
@@ -7,7 +7,6 @@
   gather_facts: false
   tasks:
     - include_role:
-        name: add_devops_user
-        tasks_from: add_user.yml
+        name: tomcat
       
 ...
